--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Components/PoisonTimer.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Cutscenes/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scripts/LevelGeneration/", "res://src/Scripts/Effects/", "res://src/Scripts/Components/", "res://src/Scripts/Cells/", "res://src/Scenes/", "res://src/Scenes/Enemy/", "res://src/Scenes/Components/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/Enemy/Spawner.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/Levels/Level3.tscn", "res://src/Scenes/Levels/Level2.tscn", "res://src/Scenes/Levels/Level4.tscn")
+open_scenes=PackedStringArray("res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/Enemy/Spawner.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/Levels/Level3.tscn", "res://src/Scenes/Levels/Level2.tscn", "res://src/Scenes/Levels/Level4.tscn", "res://src/Scenes/Cutscenes/Cutscene.tscn")
 current_scene="res://src/Scenes/Levels/Level4.tscn"
 center_split_offset=-288
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Growth.gd", "res://src/Scenes/UI/GrowthLeft.gd", "res://src/Scenes/UI/GrowthText.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Scripts/Cells/Watcher.gd"]
+open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Growth.gd", "res://src/Scenes/UI/GrowthLeft.gd", "res://src/Scenes/UI/GrowthText.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Scripts/Cells/Watcher.gd"]
 selected_script="res://src/Scripts/Level.gd"
 open_help=["Callable", "Node", "Tween"]
 script_split_offset=70
