--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Levels/Level1.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/Scenes/", "res://src/Scenes/Levels/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Cutscenes/Scene1.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/Scenes/", "res://src/Scenes/Cutscenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Camera.tscn", "res://src/Scenes/NextLevelScreen.tscn", "res://src/Scenes/Transitions/Transition.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Grower.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/GameOverScreen.tscn")
-current_scene="res://src/Scenes/Levels/Level.tscn"
+open_scenes=PackedStringArray("res://src/Scenes/Levels/Level3.tscn", "res://src/Scenes/Levels/Level4.tscn", "res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/Camera.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Abilities/BoostAbility.tscn", "res://src/Scenes/Trail/Trail.tscn", "res://src/Scenes/Enemy/Poisoner.tscn", "res://src/Scenes/Components/PoisonTimer.tscn", "res://src/Scenes/Levels/Level2.tscn", "res://src/Scenes/Enemy/Grower.tscn", "res://src/Scenes/Enemy/Stages.tscn", "res://src/Scenes/Components/Growth.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/TitleScreen.tscn", "res://src/Scenes/NextLevelScreen.tscn", "res://src/Scenes/Transitions/Transition.tscn")
+current_scene="res://src/Scenes/TitleScreen.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Button.gd", "res://src/Scripts/Camera.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/Cutscene.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Dialogue.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Scripts/GameOverScreen.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Growth.gd", "res://src/Scenes/UI/GrowthLeft.gd", "res://src/Scenes/UI/GrowthText.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/NextLevelScreen.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Cells/Stage.gd", "res://src/Scripts/Cells/Stages.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/States/StateMachine.gd", "res://src/Scripts/TextBox.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Singleton/Transition.gd", "res://src/Scripts/Cells/Watcher.gd"]
-selected_script="res://src/Scripts/Level.gd"
+open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Button.gd", "res://src/Scripts/Camera.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/Cutscene.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Dialogue.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Scripts/GameOverScreen.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Growth.gd", "res://src/Scenes/UI/GrowthLeft.gd", "res://src/Scenes/UI/GrowthText.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Instructions.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/NextLevelScreen.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Cells/Stage.gd", "res://src/Scripts/Cells/Stages.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/States/StateMachine.gd", "res://src/Scripts/TextBox.gd", "res://src/Scripts/TitleScreen.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Singleton/Transition.gd", "res://src/Scripts/Cells/Watcher.gd"]
+selected_script="res://src/Scripts/TitleScreen.gd"
 open_help=["@GlobalScope", "AnimationMixer", "AnimationPlayer", "Callable", "CanvasItem", "Node", "PackedScene", "Tween", "Vector2"]
 script_split_offset=70
 list_split_offset=0
